--- a/public/_notas/public/shr/g_Git.html
+++ b/public/_notas/public/shr/g_Git.html
@@ -45,7 +45,7 @@
     <section class="slide" id="cover">
         <h2></h2>
         <figure>
-            <img class="cover" src="https://docs.google.com/uc?id=15NjMjvI7If8GklZQFhfVJRamhShEwKYN" style="height: auto!important; width: 100vw;" >
+            <img class="cover" src="https://lh3.google.com/u/0/d/15NjMjvI7If8GklZQFhfVJRamhShEwKYN" style="height: auto!important; width: 100vw;" >
         </figure>
         <style>
             #cover h2 {
@@ -81,7 +81,7 @@
                 <li> A terceira é a HEAD, que aponta para o último commit que você fez. </li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1V7NEhI_1_ulK75IUhVxo7npAnesTns2f" style="width: 125%;" >
+                <img src="https://lh3.google.com/u/0/d/1V7NEhI_1_ulK75IUhVxo7npAnesTns2f" style="width: 125%;" >
             </figure>
         </div>
     </section>
@@ -306,7 +306,7 @@
         </div>
     </section>
 
-    <section class="slide" style="background: url(https://docs.google.com/uc?id=1V7NEhI_1_ulK75IUhVxo7npAnesTns2f) no-repeat; background-size: 90%;" >
+    <section class="slide" style="background: url(https://lh3.google.com/u/0/d/1V7NEhI_1_ulK75IUhVxo7npAnesTns2f) no-repeat; background-size: 90%;" >
     </section>
 
     <section class="slide">
@@ -332,7 +332,7 @@
 </code>
             </pre>
             <figure >
-                <img src="https://docs.google.com/uc?id=1uOA37FIU00hZXeDG0TSG-XcbA3sFuNIs" style="width: 80%;" >
+                <img src="https://lh3.google.com/u/0/d/1uOA37FIU00hZXeDG0TSG-XcbA3sFuNIs" style="width: 80%;" >
             </figure>
         </div>
     </section>
