--- a/public/_notas/public/shr/p_Planejamento.html
+++ b/public/_notas/public/shr/p_Planejamento.html
@@ -40,7 +40,7 @@
     <section class="slide" id="cover">
         <h2>Planejamento Web</h2>
         <figure>
-            <img class="cover" src="https://docs.google.com/uc?id=1_DsSwUvW5gZrnzATYIzZmHaKH9dFqzlT" style="height: auto!important; width: 100vw;" >
+            <img class="cover" src="https://lh3.google.com/u/0/d/1_DsSwUvW5gZrnzATYIzZmHaKH9dFqzlT" style="height: auto!important; width: 100vw;" >
         </figure>
         <style>
             #cover h2 {
@@ -76,7 +76,7 @@
                 <li class="next" > E você? quem é? E qual seu objetivo no curso? </li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1QnooFk9Q5H_5JvnHJBeSX01m5iuz-D6C" style="width: 100%;" >
+                <img src="https://lh3.google.com/u/0/d/1QnooFk9Q5H_5JvnHJBeSX01m5iuz-D6C" style="width: 100%;" >
             </figure>
         </div>   
     </section>
@@ -91,7 +91,7 @@
                 <li> QPT03 - Qualificação Profissional Técnica de Desenvolvedor de Webgames</li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1BAsnyb83hrBaEvBZ4sbE9CmGO-ry9zST" style="width: 120%; margin-top: -120px;" >
+                <img src="https://lh3.google.com/u/0/d/1BAsnyb83hrBaEvBZ4sbE9CmGO-ry9zST" style="width: 120%; margin-top: -120px;" >
             </figure>
         </div>   
     </section>
@@ -109,7 +109,7 @@
                 <li> <b>UC6: Projeto Integrador Produção e Design para Web - 24h</b></li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=19ncBepZUdyY80GMx1gfeDwAOCS6yLJYT" style="width: 100%;">
+                <img src="https://lh3.google.com/u/0/d/19ncBepZUdyY80GMx1gfeDwAOCS6yLJYT" style="width: 100%;">
             </figure>
         </div>  
     </section>
@@ -119,7 +119,7 @@
         <p style="font-size: 0.9rem;"><b>Objetivo:</b> desenvolver todos os documentos de planejamento das peças que serão desenvolvidas.<br> <b>Limite: 02 aulas - 13h30 às 17h30h - Intervalo às 15h </b></p>
         <div class="columns one">
             <figure >
-                <img src="https://docs.google.com/uc?id=1J5shsb_2LRAGUV6CK0iXw6P3XjSo5lSy" style="width: 75%;">
+                <img src="https://lh3.google.com/u/0/d/1J5shsb_2LRAGUV6CK0iXw6P3XjSo5lSy" style="width: 75%;">
             </figure>
         </div>  
     </section>
@@ -138,7 +138,7 @@
                 <li>Os servidores são controlados por universidades, empresas e órgãos do governo.</li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1BTryuidudg-7aJBDN7sHk4MkS0L5CNae" style="width: 100%;" >
+                <img src="https://lh3.google.com/u/0/d/1BTryuidudg-7aJBDN7sHk4MkS0L5CNae" style="width: 100%;" >
             </figure>
         </div> 
     </section>
@@ -167,7 +167,7 @@
             </ul>
 
             <figure >
-                <img src="https://docs.google.com/uc?id=10Q0vPERbX5yEY4BmL5gCHx4Kp7sSQNRH" style="width: 110%; margin-left: 50px;" >
+                <img src="https://lh3.google.com/u/0/d/10Q0vPERbX5yEY4BmL5gCHx4Kp7sSQNRH" style="width: 110%; margin-left: 50px;" >
             </figure>
         </div>
     </section>
@@ -190,7 +190,7 @@
                 <li>Patente - INPI - registra patentes - não tem restrição de expirar (100 anos)</li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1yr2r5UfTOMS35wf1debrnjNXk-hVUQiw" style="width: 120%;" >
+                <img src="https://lh3.google.com/u/0/d/1yr2r5UfTOMS35wf1debrnjNXk-hVUQiw" style="width: 120%;" >
             </figure>
         </div> 
     </section>
@@ -207,7 +207,7 @@
                 <li>Cookies -> arquivos que os sites armazenam na sua máquina</li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1P2KpBiV2SToGyOD2nPn48Fud_hLjiynQ" style="width: 120%;" >
+                <img src="https://lh3.google.com/u/0/d/1P2KpBiV2SToGyOD2nPn48Fud_hLjiynQ" style="width: 120%;" >
             </figure>
         </div> 
     </section>
@@ -235,12 +235,12 @@
                 </li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=10ymgHWkafTeasvvQMHzmrbAfnRU0gSJy" style="width: 120%;" >
+                <img src="https://lh3.google.com/u/0/d/10ymgHWkafTeasvvQMHzmrbAfnRU0gSJy" style="width: 120%;" >
             </figure>
         </div> 
     </section>
 
-    <section class="slide" style="background: url(https://docs.google.com/uc?id=1u6N803GOrpVwdW1ZdoN6TUvmYBubfcpP) no-repeat; background-size: 90%;" >
+    <section class="slide" style="background: url(https://lh3.google.com/u/0/d/1u6N803GOrpVwdW1ZdoN6TUvmYBubfcpP) no-repeat; background-size: 90%;" >
     </section>
 
     <section class="slide">
@@ -256,7 +256,7 @@
                 <li> .br - Brasil - .jp / .us </li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1L96HIzQlfwzG-NsNdk33XAr7pH5iHu1R" style="width: 100%;" >
+                <img src="https://lh3.google.com/u/0/d/1L96HIzQlfwzG-NsNdk33XAr7pH5iHu1R" style="width: 100%;" >
             </figure>
         </div> 
     </section>      
@@ -271,7 +271,7 @@
                 <li> Imagens, vídeos, áudios, textos, etc </li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=13foZ3v-5K3AR9qxr1duJNZWa3DxTA218" style="width: 100%;" >
+                <img src="https://lh3.google.com/u/0/d/13foZ3v-5K3AR9qxr1duJNZWa3DxTA218" style="width: 100%;" >
             </figure>
         </div>
     </section>
@@ -291,7 +291,7 @@
                 <li>SaaS (Software as a Service) - aplicativos hospedados permitindo o acesso via navegador web, sem a necessidade de instalação local. - Microsoft 365 - Google Workspaces - Trello </li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1vkcKhbxUbTkTygq1bAfmZ5UKkTUHeQ7O" style="width: 100%;" >
+                <img src="https://lh3.google.com/u/0/d/1vkcKhbxUbTkTygq1bAfmZ5UKkTUHeQ7O" style="width: 100%;" >
             </figure>
         </div> 
     </section>
@@ -300,11 +300,11 @@
         <h2> Tipos de Sites - Estrutura </h2>
         <div class="columns two">
             <figure >
-                <img src="https://docs.google.com/uc?id=1UYFGPkAuw23KUIFEIiSTXaaA3Zwet56P" style="width: 85%;" >
+                <img src="https://lh3.google.com/u/0/d/1UYFGPkAuw23KUIFEIiSTXaaA3Zwet56P" style="width: 85%;" >
                 <figcaption style="font-size: .8rem; text-align: center;" >Duas Colunas</figcaption>
             </figure>
             <figure >
-                <img src="https://docs.google.com/uc?id=1lFqBmPSozR0U-er5NslvgPEAqER_vlWJ" style="width: 140%;" >
+                <img src="https://lh3.google.com/u/0/d/1lFqBmPSozR0U-er5NslvgPEAqER_vlWJ" style="width: 140%;" >
                 <figcaption style="font-size: .8rem; text-align: center;" > Uma coluna </figcaption>
             </figure>
         </div> 
@@ -326,7 +326,7 @@
                 </ol></li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1b_SPEViuF6ilrBeMqtWHO_5BugpILw-X" style="width: 85%;" >
+                <img src="https://lh3.google.com/u/0/d/1b_SPEViuF6ilrBeMqtWHO_5BugpILw-X" style="width: 85%;" >
             </figure>
         </div>
     </section>
@@ -396,7 +396,7 @@
                 <li class="next" >Entregue as perguntas criadas por você.</li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1b_SPEViuF6ilrBeMqtWHO_5BugpILw-X" style="width: 85%;" >
+                <img src="https://lh3.google.com/u/0/d/1b_SPEViuF6ilrBeMqtWHO_5BugpILw-X" style="width: 85%;" >
             </figure>
         </div>
     </section>
@@ -411,7 +411,7 @@
                 <li class="next" >Pergunte apenas o necessário, mas pergunte o importante para entender o tamanho do projeto.</li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1-QoIQsxVCEz5Un3hDYYD5tYkLxnnevqi" style="width: 130%;" >
+                <img src="https://lh3.google.com/u/0/d/1-QoIQsxVCEz5Un3hDYYD5tYkLxnnevqi" style="width: 130%;" >
             </figure>
         </div>
     </section>
@@ -429,7 +429,7 @@
                 <li class="next"> Prazo </li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1-QoIQsxVCEz5Un3hDYYD5tYkLxnnevqi" style="width: 130%;" >
+                <img src="https://lh3.google.com/u/0/d/1-QoIQsxVCEz5Un3hDYYD5tYkLxnnevqi" style="width: 130%;" >
             </figure>
         </div>
     </section>
@@ -466,7 +466,7 @@
                 <li class="next"> Solicitação de orçamento automático </li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1-QoIQsxVCEz5Un3hDYYD5tYkLxnnevqi" style="width: 130%;" >
+                <img src="https://lh3.google.com/u/0/d/1-QoIQsxVCEz5Un3hDYYD5tYkLxnnevqi" style="width: 130%;" >
             </figure>
         </div>
     </section>
@@ -483,7 +483,7 @@
                 <li class="next"> Prazo </li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1-QoIQsxVCEz5Un3hDYYD5tYkLxnnevqi" style="width: 130%;" >
+                <img src="https://lh3.google.com/u/0/d/1-QoIQsxVCEz5Un3hDYYD5tYkLxnnevqi" style="width: 130%;" >
             </figure>
         </div>
     </section>
@@ -498,7 +498,7 @@
             </ul>
 
             <figure >
-                <img src="https://docs.google.com/uc?id=1JBHB50ADhRbcwZySwBWfBhhGEktTTMyh" style="width: 120%;" >
+                <img src="https://lh3.google.com/u/0/d/1JBHB50ADhRbcwZySwBWfBhhGEktTTMyh" style="width: 120%;" >
             </figure>
         </div>
     </section>
