--- a/public/_notas/public/shr/v_Video.html
+++ b/public/_notas/public/shr/v_Video.html
@@ -44,7 +44,7 @@
     <section class="slide" id="cover">
         <h2>Captura com celular</h2>
         <figure>
-            <img class="cover" src="https://docs.google.com/uc?id=1XoPBo3Ho8mLfNsV8WcrE55imwik13rSw" style="height: auto!important; width: 100vw;" >
+            <img class="cover" src="https://lh3.google.com/u/0/d/1XoPBo3Ho8mLfNsV8WcrE55imwik13rSw" style="height: auto!important; width: 100vw;" >
         </figure>
         <style>
             #cover h2 {
@@ -81,12 +81,12 @@
                 <li> Zoom no baixo e afaste para melhorar qualidade em planos mais abertos.</li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1nETbKll1LkBKeMuA1TTWbh_Dd7Ye6btC" style="width: 130%;" >
+                <img src="https://lh3.google.com/u/0/d/1nETbKll1LkBKeMuA1TTWbh_Dd7Ye6btC" style="width: 130%;" >
             </figure>
         </div>   
     </section>
 
-    <section class="slide" style="background: url(https://docs.google.com/uc?id=1KNVNmbvdejiACfo5OSH5GQ3u7IbFM4AV) no-repeat; background-size: cover;" >
+    <section class="slide" style="background: url(https://lh3.google.com/u/0/d/1KNVNmbvdejiACfo5OSH5GQ3u7IbFM4AV) no-repeat; background-size: cover;" >
         <h2 style="color: #fff;">Tamanho 4K vs FullHD</h2>
     </section>
 
@@ -94,18 +94,16 @@
         <h2 style="color: #fff;">Distorções</h2>
 
         <div class="columns two ">
-            <video style="height: 35%;" controls muted>
-                <source src="https://docs.google.com/uc?id=1My2GHUOcULDh3VokTviZsktfrkrAa2wi" type="video/mp4">
-            </video>
+
+            <iframe class="video" src="https://drive.google.com/file/d/1My2GHUOcULDh3VokTviZsktfrkrAa2wi/preview" allow="autoplay"></iframe>
             
-            <video style="height: 35%;" controls muted>
-                <source src="https://docs.google.com/uc?id=1p4kHrJMarmMO-c3OpdPn3tRqBWOsjsQp" type="video/mp4">
-            </video>
+            <iframe class="video" src="https://drive.google.com/file/d/1p4kHrJMarmMO-c3OpdPn3tRqBWOsjsQp/preview" allow="autoplay"></iframe>
+
         </div>
 
     </section>
 
-    <section class="slide" style="background: url(https://docs.google.com/uc?id=1punwucCOTR1SO7Xq8CUm-GfnAmqhjVV-) no-repeat; background-size: cover;" >
+    <section class="slide" style="background: url(https://lh3.google.com/u/0/d/1punwucCOTR1SO7Xq8CUm-GfnAmqhjVV-) no-repeat; background-size: cover;" >
     </section>
 
     <section class="slide">
@@ -116,7 +114,7 @@
                 <li> Trava de tela para melhor pegada. </li>
             </ul>
             <figure >
-                <img src="https://docs.google.com/uc?id=1OdPU2aHa3203PR_Ke5Zd1yx6QxKXoTXb" style="width: 120%;" >
+                <img src="https://lh3.google.com/u/0/d/1OdPU2aHa3203PR_Ke5Zd1yx6QxKXoTXb" style="width: 120%;" >
             </figure>
         </div>   
     </section>
@@ -125,11 +123,11 @@
         <h2>Formato e Espelhamento </h2>
         <div class="columns two">
             <figure >
-                <img src="https://docs.google.com/uc?id=1qBLxJTC9aLUmkki64rdw6PFViybtFdbq" style="width: 110%;" >
+                <img src="https://lh3.google.com/u/0/d/1qBLxJTC9aLUmkki64rdw6PFViybtFdbq" style="width: 110%;" >
                 <figcaption style="font-size: 0.5em; text-align: center;" > Escolha o maior formato (tamanho e fps) </figcaption>
             </figure>
             <figure >
-                <img src="https://docs.google.com/uc?id=1Cr6rumbYdVpTSnDe-i0PFjAOQaH2U5B2" style="width: 110%;" >
+                <img src="https://lh3.google.com/u/0/d/1Cr6rumbYdVpTSnDe-i0PFjAOQaH2U5B2" style="width: 110%;" >
                 <figcaption style="font-size: 0.5em; text-align: center;" > Espelhar a imagem (padrão) para que fique do lado correto</figcaption>
             </figure>
         </div>   
@@ -139,11 +137,11 @@
         <h2>Abertura e Velocidade</h2>
         <div class="columns two">
             <figure >
-                <img src="https://docs.google.com/uc?id=1ctD1ZldcMw9pV6FhqDukJzK398fUqVpa" style="width: 110%;" >
+                <img src="https://lh3.google.com/u/0/d/1ctD1ZldcMw9pV6FhqDukJzK398fUqVpa" style="width: 110%;" >
                 <figcaption style="font-size: 0.5em; text-align: center;" > aqui os valores vão de 0.1 - 1 (foco infinito) </figcaption>
             </figure>
             <figure >
-                <img src="https://docs.google.com/uc?id=12VrhmhfYOI116rSPqef84-mAe9lpfuZ8" style="width: 110%;" >
+                <img src="https://lh3.google.com/u/0/d/12VrhmhfYOI116rSPqef84-mAe9lpfuZ8" style="width: 110%;" >
                 <figcaption style="font-size: 0.5em; text-align: center;" > Velocidade sempre em 1/60</figcaption>
             </figure>
         </div>   
@@ -153,11 +151,11 @@
         <h2>Zoom e Balanço de Branco </h2>
         <div class="columns two">
             <figure >
-                <img src="https://docs.google.com/uc?id=1hKmqoIbO4gEsPb44tWTlaLaORPI4PGEm" style="width: 110%;" >
+                <img src="https://lh3.google.com/u/0/d/1hKmqoIbO4gEsPb44tWTlaLaORPI4PGEm" style="width: 110%;" >
                 <figcaption style="font-size: 0.5em; text-align: center;" > Zoom no máximo para Planos Fechados / mínimo para Planos Abertos </figcaption>
             </figure>
             <figure >
-                <img src="https://docs.google.com/uc?id=1R2oWMorgv0wVu94sQRP604w7lSH-6wJU" style="width: 110%;" >
+                <img src="https://lh3.google.com/u/0/d/1R2oWMorgv0wVu94sQRP604w7lSH-6wJU" style="width: 110%;" >
                 <figcaption style="font-size: 0.5em; text-align: center;" > Balanço de branco pode ficar no auto se não mudar de tipo de luz</figcaption>
             </figure>
         </div>   
@@ -167,11 +165,11 @@
         <h2>ISO e Travamento de tela </h2>
         <div class="columns two">
             <figure >
-                <img src="https://docs.google.com/uc?id=1Mvzt5w9omJ-EKtEH4HhF6UzUg_vjXt-Z" style="width: 110%;" >
+                <img src="https://lh3.google.com/u/0/d/1Mvzt5w9omJ-EKtEH4HhF6UzUg_vjXt-Z" style="width: 110%;" >
                 <figcaption style="font-size: 0.5em; text-align: center;" > ISO menor =  mais qualidade e mais necessidade de iluminação/luz </figcaption>
             </figure>
             <figure >
-                <img src="https://docs.google.com/uc?id=1M5UDnmuSAlfA8oSowpGqOunTbqp3-f0Y" style="width: 110%;" >
+                <img src="https://lh3.google.com/u/0/d/1M5UDnmuSAlfA8oSowpGqOunTbqp3-f0Y" style="width: 110%;" >
                 <figcaption style="font-size: 0.5em; text-align: center;" > Travamento de tela - permite uma pegada mais estável sem acionar controles.</figcaption>
             </figure>
         </div>   
